--- a/sync.html
+++ b/sync.html
@@ -62,7 +62,8 @@ j++;
 	document.cookie = "log=" + getCookie("log") + document.getElementsByClassName('author-name')[j].innerHTML + "now has " + document.getElementsByTagName('blockquote')[j].innerHTML + "TiPoints.<br>";
 	j++;
 		}
-window.location.href = "log.html";
+delete_cookie("view");
+	 window.location.href = "log.html";
  } else {
 setInterval(executeCode, 100);
  }
