--- a/log.html
+++ b/log.html
@@ -1,3 +1,5 @@
+<button onClick="refreshPage();">Refresh</button>
+
 <script>
  function getCookie(cname) {
     var name = cname + "=";
@@ -20,5 +22,11 @@ if (getCookie("log") == "") {
   window.location.href = "sync.html";
 } else {
   document.write(getCookie("log"));
+}
+ 
+function refreshPage() {
+document.cookie = "log=";
+ document.cookie = "view=true";
+  window.location.href = "sync.html";
 }
 </script>
