--- a/log.html
+++ b/log.html
@@ -1,4 +1,4 @@
-<button onClick="refreshPage();">Refresh</button>
+<button onClick="refreshPage();">Refresh</button><br>
 
 <script>
  function getCookie(cname) {
