--- a/give.html
+++ b/give.html
@@ -4,9 +4,10 @@
 
 <script>
 function givePoints() {
-  document.cookie = "send=true";
-  document.cookie = "sendto=" + document.getElementById('username').value;
-  document.cookie = "amount=" + document.getElementById('amount').value;
-  window.location.href = "sync.html";
+  alert("Disabled because @hymenopus was giving infinite TiPoints to everyone.");
+  //document.cookie = "send=true";
+  //document.cookie = "sendto=" + document.getElementById('username').value;
+  //document.cookie = "amount=" + document.getElementById('amount').value;
+  //window.location.href = "sync.html";
 }
 </script>
