--- a/buy.html
+++ b/buy.html
@@ -8,6 +8,6 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
-<img width=500px src="http://i.imgur.com/EZr1bGC.png"><img src="http://i.imgur.com/GUC99yv.png"><img src="http://i.imgur.com/3rEYlEG.png">
+<img width=500px src="http://i.imgur.com/EZr1bGC.png"><img width=500px src="http://i.imgur.com/GUC99yv.png"><img width=500px src="http://i.imgur.com/3rEYlEG.png">
 </body>
 </html>
