--- a/log.html
+++ b/log.html
@@ -1,4 +1,13 @@
-<button onClick="refreshPage();">Refresh</button><br>
+<!DOCTYPE html>
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+<br><br>
+<button class="base btn2" onClick="refreshPage();">Refresh</button><br>
 
 <script>
  function getCookie(cname) {
@@ -30,3 +39,6 @@ document.cookie = "log=";
   window.location.href = "sync.html";
 }
 </script>
+
+</body>
+</html>
