--- a/give.html
+++ b/give.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<title>TiMedia</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<body>
+<center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+<br><br><br><br>
 <input type="text" id="username" placeholder="Username">
 <input type="number" id="amount" placeholder="Amount">
-<button onClick="givePoints();">Give TiPoints</button>
+<button class="base btn2" onClick="givePoints();">Give TiPoints</button>
 
 <script>
 function givePoints() {
@@ -11,3 +20,5 @@ function givePoints() {
   //window.location.href = "sync.html";
 }
 </script>
+</body>
+</html>
