--- a/give.html
+++ b/give.html
@@ -13,11 +13,10 @@
 
 <script>
 function givePoints() {
-  alert("Disabled because @hymenopus was giving infinite TiPoints to everyone.");
-  //document.cookie = "send=true";
-  //document.cookie = "sendto=" + document.getElementById('username').value;
-  //document.cookie = "amount=" + document.getElementById('amount').value;
-  //window.location.href = "sync.html";
+  document.cookie = "send=true";
+  document.cookie = "sendto=" + document.getElementById('username').value;
+  document.cookie = "amount=" + document.getElementById('amount').value;
+  window.location.href = "sync.html";
 }
 </script>
 </body>
