--- a/redeem.html
+++ b/redeem.html
@@ -7,6 +7,6 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br>
-<input id="c1" type="number">-<input id="c2" type="number">-<input id="c3" type="number">
+<input id="code" type="number">
 </body>
 </html>
