--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
 <!-- end Feedback -->
-<iframe style="visibility:hidden;" id="calculator" width=300px height=300px src="https://www.online-calculator.com/html5/online-calculator/index.php">
-  <p>Your browser does not support iframes.</p>
-</iframe>
  <p id="mutemessage"></p>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
@@ -55,19 +52,14 @@
  </body>
 
 </div>
-<script>
-	
-if (localStorage.calc == "true") {
-	document.getElementById('calculator').style = "visibility:block;";
-}
-	
+<script>	
 var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick"]
 var bannedusers = [""];
 var banreason = [""]
 var mutedusers = [""];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
-      document.write("");
+      alert("This is the testing site for TiMedia. For the official site goto timedia.tk!");
   }
   
  function checkAdmin() {
