--- a/sync.html
+++ b/sync.html
@@ -55,7 +55,7 @@ j++;
 }
 }
 
-function doCode() {
+function exeCode() {
  if (getCookie("view") == "true") {
 	  var j = 0;
 	while (j < document.getElementsByTagName('blockquote').length) {
@@ -70,5 +70,5 @@ setInterval(executeCode, 100);
  }
 }
 	
-setTimeout(doCode, 1000);
+setTimeout(exeCode, 500);
 </script>
