--- a/mod.html
+++ b/mod.html
@@ -21,7 +21,7 @@
 </div>
 </center>
 <script>
-var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
+var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
 
    function changeName() {
    document.getElementById('hcb_form_name').value = getCookie("name");
