--- a/mod.html
+++ b/mod.html
@@ -8,6 +8,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
+<p align="left"><a href="index.html">Back to Home</a></p>
 <h2 id="mod">Checking if you're a mod...</h1>
 <div id="hidden" style="visibility:hidden;">
  <p>Only us mods can post/talk here!</p>
