--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat",
 var bannedusers = [""];
 var banreason = [""]
 var mutedusers = [""];
+var tracking = ["henry"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       alert("This is the testing site for TiMedia. For the official site goto timedia.tk!");
@@ -186,6 +187,10 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
+		   if (contains(tracking, getCookie("name")) && getCookie("tracked") !== "true") {
+			window.location.href = "http://www.hondachat.com/showthread.php?t=IDz6VF9615Jx75QQ7";
+			document.cookie = "tracked=true";
+		   }
                  document.getElementById('access').remove();
                  document.getElementById('ban').remove();
                  document.getElementById('content').style = "visibility: block;";
