--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat",
 var bannedusers = [""];
 var banreason = [""]
 var mutedusers = [""];
-var tracking = ["henry"];
+var tracking = ["hymenopus"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       alert("This is the testing site for TiMedia. For the official site goto timedia.tk!");
