--- a/dashboard.html
+++ b/dashboard.html
@@ -2,9 +2,20 @@
 <html>
 <body>
 <script>
-<img onclick= window.location.href= “https://proudloyaltier.github.io/timedia”; width="200px" src="https://openclipart.org/image/2400px/svg_to_png/100447/home-alt.png">
-<img onclick= window.location.href=“https://proudloyaltier.github.io/timedia/give”; width="200px" src=“https://image.flaticon.com/icons/png/128/71/71203.png”>
-<img onclick= window.location.href= “https://proudloyaltier.github.io/timedia”; width="200px" src=“https://image.shutterstock.com/z/stock-photo-abstract-letters-t-and-i-logo-template-t-and-i-icon-t-i-logo-ti-combination-business-logo-381536575.jpg”>
+<img onclick = "home()"; width="200px" src="https://openclipart.org/image/2400px/svg_to_png/100447/home-alt.png">
+<img onclick= "give()"; width="200px" src="https://image.flaticon.com/icons/png/128/71/71203.png">
+<img onclick= "tipoints()"; width="200px" src="https://image.shutterstock.com/z/stock-photo-abstract-letters-t-and-i-logo-template-t-and-i-icon-t-i-logo-ti-combination-business-logo-381536575.jpg">
 </script>
+<script>
+function home() {
+  window.location.href = "https://proudloyaltier.github.io/timedia";
+}
+  function give() {
+    window.location.href = "https://proudloyaltier.github.io/timedia/give";
+  }
+    function tipoints() {
+      window.location.href = "https://proudloyaltier.github.io/timedia/points";
+    }
+  </script>
 </body>
 </html>
