--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,6 @@
 <html>
 <body>
 <script>
-<img onclick = "home()"; width="200px" src="https://openclipart.org/image/2400px/svg_to_png/100447/home-alt.png">
 <img onclick= "give()"; width="200px" src="https://image.flaticon.com/icons/png/128/71/71203.png">
 <img onclick= "tipoints()"; width="200px" src="https://image.shutterstock.com/z/stock-photo-abstract-letters-t-and-i-logo-template-t-and-i-icon-t-i-logo-ti-combination-business-logo-381536575.jpg">
 </script>
@@ -17,5 +16,8 @@ function home() {
       window.location.href = "https://proudloyaltier.github.io/timedia/points";
     }
   </script>
+  <script>
+    <a href="index.html">(<img src = "https://openclipart.org/image/2400px/svg_to_png/100447/home-alt.png" width="200px" >)</a>
+    
 </body>
 </html>
