--- a/dashboard2.html
+++ b/dashboard2.html
@@ -16,7 +16,7 @@
 	<img onClick="showMoney()" draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png">
 	<img onClick="showGears()" draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png">
 </div><br><br><br><br><br><br>
-<div id="home">
+<div id="content">
 <h1 id="hello-message">Hello!</h1>
  <div id="HCB_comment_box">Loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
