--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
  </div>
  <br>
 <div id="content" style="visibility: hidden;">
+<div class="background" id="navbar">
+	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
+	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+</div><br>
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
 	<p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit <a href="http://coffee-media.github.io/net">CoffeeMedia!</a> (The admins regularly post there too!)</p>
