--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
  <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a>
- </div><br>
+</div>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
  <p>You may not appeal for this ban.<p>
  <button onclick="logOut()" class="base btn">Log Out</button>
  </div>
-<div id="content" style="visibility: hidden;">
+<div id="content" style="visibility:hidden;">
 <div class="background" id="navbar">
 	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
 	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
