--- a/points.html
+++ b/points.html
@@ -11,7 +11,7 @@
 	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
-</div><br>
+</div><br><br><br>
 <h3 id="balance">Current balance: Loading...</h3><br>
  <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
  <h3>Earn points by pledging TI!</h3>
