--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br>
-<div id="access">
+<div id="access" style="padding:35px;">
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
