--- a/blank.html
+++ b/blank.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -7,5 +8,12 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
 <br><br><br>
-</body>
+ <div class="background" id="navbar">
+	<a href="index.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
+	<a href="news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
+	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+</div><br><br><br><br><br>
+ </center>
+ </body>
 </html>
