--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
 </div>
 <script>	
-var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZDp0SQ==", "bmVpbDpjYXQ=", "aGF5ZGVuOnF3ZXJ0eQ==", "cmFlZjp0aQ==", "bmFjaG9jaGVlc2UyMDE3Om1jY29ybWljaw=="]
+var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZDp0SQ==", "bmVpbDpjYXQ=", "aGF5ZGVuOnF3ZXJ0eQ==", "cmFlZjp0aQ==", "bmFjaG9jaGVlc2UyMDE3Om1jY29ybWljaw==", "dmlvaXNhbmVyZDp0aQ==¡"]
 var bannedusers = [""];
 var banreason = [""]
-var mutedusers = [""];
+var mutedusers = ["vioisanerd"];
 var tracking = [""];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
