--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@
 </div>
 </center>
 <script>
-var admins = ["hymenopus", "graphinghandheld"];
+var admins = ["hymenopus", "graphinghandheld", "neil"];
  
 function contains(a, obj) {
   for (var i = 0; i < a.length; i++) {
