--- a/sync.html
+++ b/sync.html
@@ -4,54 +4,54 @@ Syncing your TiPoints and purchases...
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10000000&ts=1495665618881");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 
 <script>
-document.getElementsByTagName('a')[0].remove();
- function getCookie(cname) {
-    var name = cname + "=";
-    var decodedCookie = decodeURIComponent(document.cookie);
-    var ca = decodedCookie.split(';');
-    for(var i = 0; i <ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0) == ' ') {
-            c = c.substring(1);
-        }
-        if (c.indexOf(name) == 0) {
-            return c.substring(name.length, c.length);
-        }
+function getCookie(cname) {
+  var name = cname + "=";
+  var decodedCookie = decodeURIComponent(document.cookie);
+  var ca = decodedCookie.split(';');
+  for (var i = 0; i < ca.length; i++) {
+    var c = ca[i];
+    while (c.charAt(0) == ' ') {
+      c = c.substring(1);
     }
-    return "";
+    if (c.indexOf(name) == 0) {
+      return c.substring(name.length, c.length);
+    }
+  }
+  return "";
 }
- 
- function delete_cookie(name) {
+
+function delete_cookie(name) {
   document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
 }
 
 function getFromDatabase(name) {
-var i = 0;
-while (i < document.getElementsByTagName('blockquote').length) {
-			if (document.getElementsByTagName('blockquote')[i].innerHTML.includes(name) && document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
-				localStorage.setItem(name, document.getElementsByTagName('blockquote')[i].innerHTML.substring(name.length + 1));
-				window.location.href = "index.html";
-				throw new Error("Got value from database.");
-			}
-		i++;
-	}
-	
-}
-	
-function storeInDatabase(name, value) {
-	document.getElementById('hcb_form_name').value = getCookie("name");
-	document.getElementById('hcb_form_content').value = name + ":" + value;
-	document.getElementById('hcb_submit').click();
+  var i = 0;
+  while (i < document.getElementsByTagName('blockquote').length) {
+    if (document.getElementsByTagName('blockquote')[i].innerHTML.includes(name) && document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
+      localStorage.setItem(name, document.getElementsByTagName('blockquote')[i].innerHTML.substring(name.length + 1));
+      window.location.href = "index.html";
+      throw new Error("Got value from database.");
+    }
+    i++;
+  }
+
 }
 
-	
-if (getCookie("post") == "true") {
-		storeInDatabase("points", localStorage.points);
-		storeInDatabase("purchases", localStorage.purchases);
-		delete_cookie("login");
-		window.location.href = "index.html";
-} else {
-		getFromDatabase("points");
-		getFromDatabase("purchases");
+function storeInDatabase(name, value) {
+  document.getElementById("hcb_form_name").value = getCookie("name");
+  document.getElementById("hcb_form_content").value = name + ":" + value;
+  document.getElementById("hcb_submit").click();
 }
+
+
+if (getCookie("post") == "true") {
+  storeInDatabase("points", localStorage.points);
+  storeInDatabase("purchases", localStorage.purchases);
+  delete_cookie("login");
+  window.location.href = "index.html";
+} else {
+  getFromDatabase("points");
+  getFromDatabase("purchases");
+}
+
 </script>
