--- a/news.html
+++ b/news.html
@@ -14,6 +14,7 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
+	<b>May 30th, 2017</b> - now syncs purchases too with a NEW syncing script!
  </center>
  </body>
 </html>
