--- a/news.html
+++ b/news.html
@@ -15,6 +15,7 @@
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br><br>
 	<b>May 30th, 2017</b> - now syncs purchases too with a NEW syncing script!
+	<b>New Admin!</b> - neil is now a partial owner, and coder for TI Media!
  </center>
  </body>
 </html>
