--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div><br><br><br><br><br>
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
 <p id="modpanelnotice"></p>
-<div style="border-style:solid;">
+<div style="background-color:white;">
 <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
  <img width=85px src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/TI-nspire_CX_CAS.jpg/220px-TI-nspire_CX_CAS.jpg">
  <img width=150px src="https://images-na.ssl-images-amazon.com/images/I/A1p6HHnJWaL._SX466_.jpg">
