--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
@@ -71,7 +72,7 @@ var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
  }
  
 function checkRank() {
-  if (localStorage.purchases.includes("!!isvit:true!!") {
+  if (localStorage.purchases.includes("!!isvit:true!!")) {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
@@ -80,7 +81,7 @@ if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("na
 i++;
 }
   }
-  if (localStorage.purchases.includes("!!ismvt:true!!") {
+  if (localStorage.purchases.includes("!!ismvt:true!!")) {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
@@ -192,7 +193,7 @@ function checkPass() {
                  checkAdmin();
 		 setInterval(checkRank, 50);
                  setInterval(changeName, 50);
-		   if (localStorage.purchases.includes("!!has89:true!!") {  
+		   if (localStorage.purchases.includes("!!has89:true!!")) {  
 				document.cookie = "has89=true";
 		       } else {
 		       		document.getElementById('89').remove();	 
