--- a/ti92plus/index.html
+++ b/ti92plus/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>
-TI-92 Plus emulator (beta version 11)
+TI-92 Plus
 </title>
 <script src="v4rom.js"></script>
 <script src="v4sav.js"></script>
