--- a/ti92plus/index.html
+++ b/ti92plus/index.html
@@ -4,6 +4,7 @@
 <title>
 TI-92 Plus
 </title>
+<center>
 <script src="v4rom.js"></script>
 <script src="v4sav.js"></script>
 <script type="text/javascript">
@@ -5655,6 +5656,6 @@ function loadrom()
 <img src="Ti-92plus.jpg" usemap="#map" ismap>
 <map name="map" id="map"></map>
 <canvas id="screen" width="480" height="256" style="position:absolute;top:50px;left:209px">
-</body>
+	</center>
+	</body>
 </html>
-
