--- a/check-out-ti-news.html
+++ b/check-out-ti-news.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <title>TiMedia</title>
-<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <center>
 <div class="top">
@@ -11,9 +10,13 @@
  <div class="background" id="navbar">
 	<a href="check-out-ti-home.html"><img draggable=false id="home-icon" style="padding:50px;" width=50px src="home.png"></a>
 	<a href="check-out-ti-news.html"><img draggable=false id="news-icon" style="padding:50px;" width=50px src="news.png"></a>
-	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
-	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
+	<a href="check-out-ti-points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
+	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
  </center>
  </body>
+ <style>
+	 
+ </style>
 </html>
+
