--- a/check-out-ti-news.html
+++ b/check-out-ti-news.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <div class="top">
- <h2 style="color:white;">TiMedia</h2>
+ <h2 id="TiMedia" style="color:white;">TiMedia</h2>
  </div>
 <br><br>
  <div class="background" id="navbar">
@@ -16,7 +16,13 @@
  </center>
  </body>
  <style>
-	 
+	 #TiMedia {
+		color:white;
+		background-color:black;
+	 }
+	 #navbar {
+		background-color:green; 
+	 }
  </style>
 </html>
 
