--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
- <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a>
+ <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a> Not sure you want to sign up? This <a href="https://proudloyaltier.github.io/timedia/check-out-ti-home.html">informational page</a> which will show you Ti Media's functions, and the benifits of becoming a user!</p>
 </div>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
