--- a/check-out-ti-points.html
+++ b/check-out-ti-points.html
@@ -13,6 +13,7 @@
 	<a href="check-out-ti-points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
+	<p>In this page you can earn Ti points by watching ads, and pledging ti.<br />You can spend them on buying VIT (Very Important TIer) or MVP (Most Valubale TIer) status.<br /> These can make your name be written in bright colors when you post.<br /> You can also buy a virtual calculator. </p>
  </center>
  </body>
  <style>
