--- a/check-out-ti-home.html
+++ b/check-out-ti-home.html
@@ -13,6 +13,7 @@
 	<a href="check-out-ti-points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
+	<h3><b>TiMedia Home</b></h3>
  </center>
  </body>
  <style>
