--- a/check-out-ti-home.html
+++ b/check-out-ti-home.html
@@ -15,6 +15,7 @@
 </div><br><br><br><br><br>
 	<h1><b>TiMedia Home</b></h1>
 	<h3>Welcome, new TIer!</h3>
+	<p>This is the page that you can post from.<br /><br />It diplays a variety of calculators above the comment box.<br /><br />No computer, No problem!<br />Ti media app coming soon!<br /><br /></p>
  </center>
  </body>
  <style>
