--- a/check-out-ti-home.html
+++ b/check-out-ti-home.html
@@ -15,7 +15,7 @@
 </div><br><br><br><br><br>
 	<h1><b>TiMedia Home</b></h1>
 	<h3>Welcome, new TIer!</h3>
-	<p>This is the page that you can post from.<br /><br />It diplays a variety of calculators above the comment box.<br /><br />No computer, No problem!<br />Ti media app coming soon!<br /><br /></p>
+	<p>This is the page that you can post from.<br /><br />It diplays a variety of calculators above the comment box.<br /><br />No computer, No problem!<br />Ti media app coming soon!<br /><br /><a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform">Request an Account Here!</a></p>
  </center>
  </body>
  <style>
