--- a/check-out-ti-home.html
+++ b/check-out-ti-home.html
@@ -15,7 +15,7 @@
 </div><br><br><br><br><br>
 	<h1><b>TiMedia Home</b></h1>
 	<h3>Welcome, new TIer!</h3>
-	<p>TiMedia is an amazing TI forum/social media website!<br />(TI stands for Texas Instruments, which is a calculator company. Visit their website <a href="http://www.ti.com/">here</a>)<br /><br />No computer, No problem!<br />New Ti media app coming soon!<br /><br /><a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform">Request an Account Here!</a><br /><br />Not into TI? For another awesome social media site visit <a href="https://coffee-media.github.io/net/">Coffee Media!</a></p>
+	<p>TiMedia is an amazing TI forum/social media website!<br />(TI stands for Texas Instruments, which is a calculator company. Visit their website <a href="http://www.ti.com/">here</a>)<br /><br />No computer, No problem!<br />New Ti media app coming soon!<br /><br />If you're a good TIer you can become a mod, which lets you mute/ban bad TIers, or maybe even an admin, the highest status!<br />These ranks cannot be bought with TI points!<br /><br /><a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform">Request an Account Here!</a><br /><br />Not into TI? For another awesome social media site visit <a href="https://coffee-media.github.io/net/">Coffee Media!</a></p>
  </center>
  </body>
  <style>
