--- a/points.html
+++ b/points.html
@@ -20,7 +20,9 @@
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png">
- <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
+<img onclick="buyLimited();" width=200px src="http://i.imgur.com/6Tpi4aC.png"><br>
+	<span id="timeleft" style="color:red"><b>Going offsale soon!</b></span>
+	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <script>
@@ -77,16 +79,16 @@ if (Number(localStorage.points) > 2499) {
 }
 }
 }
- 
-function buyCalc() {
-if (localStorage.calc == "true") {
+
+function buyLimited() {
+if (localStorage.purchases.includes("!!has89le:true!!")) {
  alert("Already purchased.");
 } else {
-if (Number(localStorage.points) > 99) {
-    var r = confirm("Would you like to buy Virtual Calculator for 100 TiPoints?");
+if (Number(localStorage.points) > 2499) {
+    var r = confirm("Would you like to buy (LIMITED EDITION) TI-89 Virtual Calculator for 100 TiPoints?");
     if (r == true) {
      localStorage.setItem("points", Number(localStorage.points - 100));
-       localStorage.setItem("calc", true);
+   localStorage.purchases = localStorage.purchases + "!!has89le:true!!";
        alert("Purchase successful."); 
        location.reload();  
     }
@@ -95,6 +97,7 @@ if (Number(localStorage.points) > 99) {
 }
 }
 }
+
  
 function checkPledge() {
  if (document.getElementById('pledge').value == "I pledge TI to the TI of the TI of Texas Instruments, and to the TI for which it TIs one TI under TI divisible by one and TI with TI and TI for TI.") {
@@ -114,7 +117,9 @@ if (localStorage.purchases = undefined) {
 }
 	
 document.getElementById('balance').innerHTML = "Current balance: " + localStorage.points + " TiPoints";
- 
+
+document.getElementById('timeleft').innerHTML = "Going offsale in " + 48 - new Date().getHours() + " hours!";
+	
 setInterval(checkPledge, 50);
 </script>
 </body></center>
