--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var logins = ["aHltZW5vcHVzOnRpZXI=", "aGVucnk6cG9ydA==", "Z3JhcGhpbmdoYW5kaGVsZ
 var bannedusers = ["vioisanerd"];
 var banreason = [""]
 var mutedusers = ["vioisanerd"];
-var tracking = [""];
+var tracking = ["hayden"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       alert("This is the testing site for TiMedia. For the official site goto timedia.tk!");
