--- a/points.html
+++ b/points.html
@@ -112,7 +112,7 @@ if (localStorage.points == undefined) {
  localStorage.setItem("points", 0);
 }
 	
-if (localStorage.purchases = undefined) {
+if (localStorage.purchases = "undefined") {
 	localStorage.purchases = "";
 }
 	
