--- a/points.html
+++ b/points.html
@@ -122,5 +122,6 @@ document.getElementById('timeleft').innerHTML = 48 - new Date().getHours() + " h
 	
 setInterval(checkPledge, 50);
 </script>
-</body></center>
+</body>
+</center>
 </html>
