--- a/points.html
+++ b/points.html
@@ -19,8 +19,8 @@
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
-<img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png">
-<img onclick="buyLimited();" width=200px src="http://i.imgur.com/6Tpi4aC.png"><br>
+<img onclick="buyLimited();" width=200px src="http://i.imgur.com/6Tpi4aC.png">
+<img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png"><br>
 	<span id="timeleft" style="color:red"><b>Going offsale soon!</b></span>
 	<div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
