--- a/index.html
+++ b/index.html
@@ -77,23 +77,34 @@ var mods = ["hymenopus", "graphinghandheld", "hayden", "neil", "henry"];
  }
  
 function checkRank() {
-  if (localStorage.purchases.includes("!!isvit:true!!")) {
+  if (localStorage.purchases.includes("!!isvit:true!!") && !localStorage.purchases.includes("!!ismvt:true!!")) {
     var i = 0;
-while (i < 10) {
-if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
-	document.getElementsByClassName('author-name')[i].style = "color:gold;";
-}
-i++;
-}
+	while (i < 10) {
+		if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
+		document.getElementsByClassName('author-name')[i].style = "color:gold;";
+		}
+		i++;
+	}
+ }
+  if (localStorage.purchases.includes("!!ismvt:true!!") && !localStorage.purchases.includes("!!isvit:true!!")) {
+    var i = 0;
+	while (i < 10) {
+		if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
+		document.getElementsByClassName('author-name')[i].style = "color:green;";
+	}
+	i++;
+	}
   }
-  if (localStorage.purchases.includes("!!ismvt:true!!")) {
+	
+	
+  if (localStorage.purchases.includes("!!ismvt:true!!") && localStorage.purchases.includes("!!isvit:true!!")) {
     var i = 0;
-while (i < 10) {
-if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
-	document.getElementsByClassName('author-name')[i].style = "color:green;";
-}
-i++;
-}
+	while (i < 10) {
+		if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
+		document.getElementsByClassName('author-name')[i].style = "color:blue;";
+	}
+	i++;
+	}
   }
 }
   function changeName() {
