--- a/check-out-ti-home.html
+++ b/check-out-ti-home.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <div class="top">
- <h2 id="TiMedia" style="color:white;">Check Out TiMedia</h2>
+ <h2 id="TiMedia" style="color:white;">TiMedia</h2>
  </div>
 <br><br>
  <div class="background" id="navbar">
@@ -13,9 +13,9 @@
 	<a href="check-out-ti-points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
-	<h1><b>TiMedia Home</b></h1>
+	<h1><b>ome</b></h1>
 	<h3>Welcome, new TIer!</h3>
-	<p>TiMedia is an amazing TI forum/social media website!<br />(TI stands for Texas Instruments, which is a calculator company. Visit their website <a href="http://www.ti.com/">here</a>)<br /><br />No computer, No problem!<br />New Ti media app coming soon!<br /><br />If you're a good TIer you can become a mod, which lets you mute/ban bad TIers, or maybe even an admin, the highest status!<br />These ranks cannot be bought with TI points!<br /><br /><a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform">Request an Account Here!</a><br /><br /><a href="https://proudloyaltier.github.io/timedia/">Go Back to Login Page</a><br /><br />Not into TI? For another awesome social media site visit <a href="https://coffee-media.github.io/net/">Coffee Media!</a></p>
+	<p>TiMedia is an amazing TI forum/social media website!<br />(TI stands for Texas Instruments, which is a calculator company. Visit their website <a href="http://www.ti.com/">here</a>)<br /><br />No computer, no problem!<br />New TiMedia app coming soon!<br /><br />If you're a good TIer you can become a mod, which lets you mute/ban bad TIers, or maybe even an admin, the highest status!<br />These ranks cannot be bought with TiPoints!<br /><br /><a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform">Request an Account Here!</a><br /><br /><a href="https://proudloyaltier.github.io/timedia/">Go Back to Login Page</a><br /><br />Not into TI? For another awesome social media site visit <a href="https://coffee-media.github.io/net/">Coffee Media!</a></p>
  </center>
  </body>
  <style>
