--- a/check-out-ti-news.html
+++ b/check-out-ti-news.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <div class="top">
- <h2 id="TiMedia" style="color:white;">Check Out TiMedia</h2>
+ <h2 id="TiMedia" style="color:white;">TiMedia</h2>
  </div>
 <br><br>
  <div class="background" id="navbar">
@@ -14,7 +14,7 @@
 	<a href="check-out-ti-settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
 	<h1><b>TiNews</b></h1>
-	<p>On this page you can see the latest TiMedia News!</p>
+	<p>On this page you can see the latest TiMedia news!</p>
  </center>
  </body>
  <style>
