--- a/check-out-ti-settings.html
+++ b/check-out-ti-settings.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <div class="top">
- <h2 id="TiMedia" style="color:white;">Check Out TiMedia</h2>
+ <h2 id="TiMedia" style="color:white;">TiMedia</h2>
  </div>
 <br><br>
  <div class="background" id="navbar">
