--- a/points.html
+++ b/points.html
@@ -14,7 +14,7 @@
 </div><br><br><br><br><br>
 <h1 id="balance">Loading...</h1><br>
 	<p>TiPoints</p>
- <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
+ <a href="http://microify.com/1zrV"><img src="http://i.imgur.com/2aVK3kw.png"></a>
  <h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here."><br>
