--- a/points.html
+++ b/points.html
@@ -12,8 +12,7 @@
 	<a href="points.html"><img draggable=false id="money-icon" style="padding:50px;" width=50px src="money.png"></a>
 	<a href="settings.html"><img draggable=false id="gears-icon" style="padding:50px;" width=50px src="gears.png"></a>
 </div><br><br><br><br><br>
-<h1 id="balance">Loading...</h1><br>
-	<p>TiPoints</p>
+<h1 id="balance">Loading...</h1>
  <a href="http://microify.com/1zrV"><img src="http://i.imgur.com/2aVK3kw.png"></a>
  <h3>Earn points by pledging TI!</h3>
  <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
